# CreativeBench

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chat.md  docker-compose.yml  pyproject.toml
data/: taxonomy.json
data/evaluation/: cases.jsonl  security_cases.jsonl
data/examples/: prompts.jsonl  raw_prompts.csv  raw_prompts_with_duplicates.csv
data/schemas/: prompt.schema.json
docs/: code-reading-guide.md  data-schema.md  database.md  deduplication.md  deployment.md  evaluation-and-security.md  fastapi.md  glm-classification.md  human-review.md  ingestion.md  knowledge-base.md  knowledge-feedback.md  langchain-rag.md  project-flow-walkthrough.md
src/creativebench/: __init__.py  __main__.py  cli.py  config.py  models.py  validation.py
src/creativebench/api/: __init__.py  app.py  cli.py  runtime.py  schemas.py
src/creativebench/classification/: __init__.py  cli.py  generation.py  model.py  models.py  service.py
src/creativebench/database/: __init__.py  base.py  classification_repository.py  cli.py  io.py  models.py  repository.py  session.py
src/creativebench/deduplication/: __init__.py  cli.py  embeddings.py  fingerprint.py  models.py  pipeline.py
src/creativebench/evaluation/: __init__.py  cli.py  io.py  live.py  metrics.py  models.py  runner.py
src/creativebench/ingestion/: __init__.py  cleaning.py  cli.py  models.py  pipeline.py  readers.py
src/creativebench/knowledge/: __init__.py  builder.py  cli.py  feedback.py  models.py  store.py
src/creativebench/rag/: __init__.py  chain.py  cli.py  models.py
src/creativebench/review/: __init__.py  cli.py  models.py
src/creativebench/security/: __init__.py  benchmark.py  cli.py  models.py  scanner.py
src/creativebench/ui/: __init__.py  client.py
tests/: test_api.py  test_api_cli.py  test_classification.py  test_database.py  test_deduplication.py  test_evaluation.py  test_evaluation_live.py  test_ingestion.py  test_knowledge.py  test_models.py  test_rag.py  test_review.py  test_security.py  test_ui_client.py
ui/: streamlit_app.py
