[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "creativebench"
version = "0.1.0"
description = "基于 GLM + RAG 的创意写作 Prompt 资产管理与智能标注系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.10,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]
semantic = [
    "sentence-transformers>=3.4,<6.0",
]

[project.scripts]
creativebench-validate = "creativebench.cli:main"
creativebench-import = "creativebench.ingestion.cli:main"
creativebench-deduplicate = "creativebench.deduplication.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
